--- a/app/assets/stylesheets/new_game.css
+++ b/app/assets/stylesheets/new_game.css
@@ -3,6 +3,8 @@
 	height: 580px;
 	background-color: black;
 	color: white;
-	border: gray;
 	text-align: center;
+}
+.gameRow {
+	border: 3px solid gray;
 }
