games are saved after each inning, games can be resumed, all games are displayed

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -9,6 +9,7 @@
 		<tr>
 			<td><%= game.home_name %></td>
 			<td><%= game.away_name %></td>
+			<td><%= link_to("Resume Game", game_path(game)) %></td>
 		</tr>
 		<tr>
 			<td><%= game.home_score %></td>
