--- a/app/assets/stylesheets/new_game.css
+++ b/app/assets/stylesheets/new_game.css
@@ -1,12 +1,13 @@
-
-
-.umpCount table{
+.umpCount {
 	width: 320px;
 	height: 580px;
 	background-color: black;
 	color: white;
 	text-align: center;
 }
-.gameRow {
-	border: 3px solid gray;
+.row {
+	height: 25%;
+}
+.container div {
+	padding: 16px;
 }
