Changed styling on index, beginning implementation of FastClick to get rid of 300ms touch delay

--- a/app/assets/stylesheets/new_game.css
+++ b/app/assets/stylesheets/new_game.css
@@ -6,8 +6,11 @@
 	text-align: center;
 }
 .row {
-	height: 25%;
+	height: 20%;
 }
 .container div {
 	padding: 16px;
+}
+td, th {
+  padding: 8px 16px 0 8px;
 }
