FastClick implemented on umping page

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,3 +1,9 @@
+<script>
+	$(function() {
+    FastClick.attach(document.body);
+	});
+</script>
+
 <div id="<%= @game.id %>"class="umpCount container">
 	<div class="row">
 		<div class="strikesBox col-xs-6">Strikes
