--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -31,6 +31,6 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="reset">RESET</div>
+		<div class="reset"><%= link_to("Back", root_path) %></div>
 	</div>
 </div>
