--- a/app/assets/stylesheets/new_game.css
+++ b/app/assets/stylesheets/new_game.css
@@ -1,16 +1,18 @@
 .umpCount {
 	width: 320px;
 	height: 580px;
-	background-color: black;
-	color: white;
+	font-size: 24px;
 	text-align: center;
 }
+
 .row {
 	height: 20%;
 }
+
 .container div {
 	padding: 16px;
 }
+
 td, th {
   padding: 8px 16px 0 8px;
 }
