--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,12 +1,6 @@
 <div class="container">
-	<div>
-	<% if current_user %>
-		<%= link_to "log out", destroy_user_session_path, method: :delete %>
-	<% end %>
-	</div>
-	<div>
-		<%= link_to("New Game", new_game_path) %>
-	</div>
+<div class="col-md-2 col-xs-0"></div>
+<div class="col-xs-12 col-md-6">
 	<h3>Games: </h3>
 	<table>	
 		<% @games.each do |game| %>
@@ -27,5 +21,5 @@
 		</tr>
 		<% end %>
 	</table>	
-
+	</div>
 </div>
