--- a/app/assets/stylesheets/new_game.css
+++ b/app/assets/stylesheets/new_game.css
@@ -12,6 +12,13 @@
 .row div{
 
 }
+.nameTeams p {
+  font-size: 16px;
+  margin-top: 6px;
+}
+.nameTeams {
+
+}
 
 .container div {
 	padding: 16px;
