--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -3,6 +3,7 @@
     FastClick.attach(document.body);
 	});
 </script>
+
 <div id="<%= @game.id %>"class="umpCount container">
 	<div class="row">
 		<div class="strikesBox col-xs-6">Strikes
@@ -28,6 +29,7 @@
 	</div>
 	<div class="row">
 		<div class="undo col-xs-6"><p>UNDO</p> </div>
+		<!-- <div class="nameTeams col-xs-4"><p>RENAME</p></div> -->
 		<div class="reset col-xs-6"><p> <%= link_to("Back", root_path) %></p></div>
 	</div>
 </div>
