--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,11 +1,12 @@
 	<% if !@source %>
 		<div class="container">
-		<div class="row">
-			<div class="col-md-2 col-xs-0"></div>
-			<div class="col-xs-6 col-md-3">
-				<%= link_to("New Game", new_game_path) if current_user %>
+		<div class="row navbar">
+			<div class="col-xs-4 col-md-3">
+			<% if current_user %>
+				<%= link_to("new game", new_game_path) %>
+			<% end %>
 			</div>
-			<div class="col-xs-6 col-md-3">
+			<div class="col-xs-4 col-md-3">
 			<% if current_user %>
 				<%= link_to "log out", destroy_user_session_path, method: :delete %>
 			<% else %>
