--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 	<% if !@source %>
 		<div class="container">
-		<div class="row navbar">
+		<div class="row nav">
 			<div class="col-xs-4 col-md-3">
 			<% if current_user %>
 				<%= link_to("new game", new_game_path) %>
