--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -2,29 +2,29 @@
 <div class="col-xs-12 col-md-6">
 	<p class="games">games:</p>
 		<% @games.each do |game| %>
-		<tr>
+		<div class="selectGame">
+		<div id="select" class="selectButton">
+			<%= continue(game) %>
+		<!-- WATCH || RESUME|X -->
+		<!-- postion selectGame absolutely within an parent div -->
+		<!-- parent div needs to be relative, child absolute -->
+		</div>
 		<table id="<%= game.id %>" class="gameData">
 			<tr>
-				<td colspan="4"><%= game.created_at.strftime("%l:%M %p - %b %d, %Y")%></td>
+				<td class="smallText" colspan="3"><%= game.created_at.strftime("%l:%M %p - %b %d, %Y")%></td>
 			</tr>
 			<tr>
-				<td><%= game.home_name %></td>
-				<td><%= game.away_name %></td>
-				<td><%= resume_watch(game) %></td>
-				<% if game.my_game?(current_user) %>
-					<td class="deleteGame"><a><h5> X </h5></a></td>
-				<% else %>
-					<td><a><h3></h3></a></td>
-				<% end %>
+				<td class="smallText" ><%= game.home_name %></td>
+				<td class="smallText" ><%= game.away_name %></td>
+				<td><%= game.display_inning %></td>
 			</tr>
 			<tr>
 				<td><%= game.home_score %></td>
 				<td><%= game.away_score %></td>
-				<td><%= game.display_inning %></td>
 				<td><%= game.display_outs %></td>
 			</tr>
 		</table>
-		</tr>
+		</div>
 		<% end %>
 	</div>
 </div>
