added small background change

--- a/app/assets/stylesheets/game.css
+++ b/app/assets/stylesheets/game.css
@@ -107,7 +107,9 @@ body {
 .smallText {
   font-size: 10px;
 }
-
+.container > .row {
+  background-color: white;
+}
 .container div table {
   margin-bottom: 16px;
 }
