--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 <div class="col-xs-12 col-md-6">
 	<p class="games">games:</p>
-		<% @games.each do |game| %>
+		<% if false # @games.each do |game| %>
 			<div class="selectGame">
 			<div id="select" class="selectButton">
 				<%= continue(game) %>
