--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,7 +1,12 @@
 <div class="container">
-<div class="col-xs-12 col-md-6">
-	<p class="games">games:</p>
-		<% @games.each do |game| %>
+<div class="row">
+	<p class="col-md-12 games">games:</p>
+	<div class="col-md-12">
+		<p>
+			<%=	$redis.sdiff('ones','twos','threes','fives').sort {|n,m| m.to_i <=> n.to_i }.join(', ') %>
+		</p>
+	</div>
+		<% if false # @games.each do |game| %>
 			<div class="selectGame">
 			<div id="select" class="selectButton">
 				<%= continue(game) %>
